--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Albertyhu.github.io",
+  "homepage": "https://Albertyhu.github.io/Simpsons-Memory-Card-Game/",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
